--- a/pronosticos_pergolite.ipynb
+++ b/pronosticos_pergolite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,14 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
     "from statsmodels.graphics.tsaplots import plot_pacf\n",
     "from statsmodels.tsa.stattools import pacf\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
     "import itertools\n",
     "\n",
     "\n",
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb9eafa7920>"
+       "<matplotlib.legend.Legend at 0x7f2b9d8ca3c0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +265,7 @@
        " np.float64(293.22109620664384))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,86 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mes\n",
-      "2020-01-01    1.098612\n",
-      "2020-02-01    2.079442\n",
-      "2020-03-01    0.000000\n",
-      "2020-04-01    1.203973\n",
-      "2020-05-01    1.734601\n",
-      "2020-06-01    2.079442\n",
-      "2020-07-01    2.302585\n",
-      "2020-08-01    1.098612\n",
-      "2020-09-01    2.079442\n",
-      "2020-10-01    2.772589\n",
-      "2020-11-01    2.197225\n",
-      "2020-12-01    1.098612\n",
-      "2021-01-01    0.000000\n",
-      "2021-02-01    1.609438\n",
-      "2021-03-01    1.098612\n",
-      "2021-04-01    0.000000\n",
-      "2021-05-01    1.609438\n",
-      "2021-06-01    2.197225\n",
-      "2021-07-01    2.397895\n",
-      "2021-08-01    1.945910\n",
-      "2021-09-01    1.098612\n",
-      "2021-10-01    1.386294\n",
-      "2021-11-01    1.386294\n",
-      "2021-12-01    1.386294\n",
-      "2022-01-01    1.386294\n",
-      "2022-02-01    2.197225\n",
-      "2022-03-01    0.000000\n",
-      "2022-04-01    0.000000\n",
-      "2022-05-01    2.302585\n",
-      "2022-06-01    1.386294\n",
-      "2022-07-01    1.609438\n",
-      "2022-08-01    1.386294\n",
-      "2022-09-01    2.397895\n",
-      "2022-10-01    1.609438\n",
-      "2022-11-01    2.079442\n",
-      "2022-12-01    1.098612\n",
-      "2023-01-01    1.098612\n",
-      "2023-02-01    2.079442\n",
-      "2023-03-01    2.708050\n",
-      "2023-04-01    0.693147\n",
-      "2023-05-01    2.302585\n",
-      "2023-06-01    1.791759\n",
-      "2023-07-01    1.945910\n",
-      "2023-08-01    1.791759\n",
-      "2023-09-01    1.609438\n",
-      "2023-10-01    2.197225\n",
-      "2023-11-01    2.197225\n",
-      "2023-12-01    1.791759\n",
-      "2024-01-01    2.995732\n",
-      "2024-02-01    1.386294\n",
-      "2024-03-01    2.079442\n",
-      "2024-04-01    1.791759\n",
-      "2024-05-01    2.197225\n",
-      "2024-06-01    2.708050\n",
-      "2024-07-01    2.708050\n",
-      "2024-08-01    2.079442\n",
-      "2024-09-01    2.302585\n",
-      "2024-10-01    3.091042\n",
-      "2024-11-01    3.367296\n",
-      "2024-12-01    2.484907\n",
-      "Freq: MS, Name: Cantidad, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(base_analisis_pergolite_v2)\n",
-    "base_analisis_pergolite_v2.to_excel('baseTT.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +675,7 @@
        "2023-12-01   6.000000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_40217/1555808215.py:15: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "/tmp/ipykernel_3681/870730603.py:7: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "  future_dates = pd.date_range(base_analisis_pergolite_com.index[-1], periods=future_steps + 1, freq='M')[1:]\n"
      ]
     },
@@ -832,12 +756,9 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
     "\n",
-    "# Cargar datos desde el archivo Excel\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# Aplicar el modelo de Holt-Winters con componentes aditivos\n",
@@ -896,6 +817,406 @@
    ],
    "source": [
     "print(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CALCULO DE ERRORES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 2.6702\n",
+      "MSE: 12.0212\n",
+      "RMSE: 3.4672\n",
+      "MAPE: 62.4000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cantidad</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mes</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-02-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-01</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-01</th>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-01</th>\n",
+       "      <td>5.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-01</th>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-04-01</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-01</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-01</th>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-01</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-01</th>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-06-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-01</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-01</th>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-01</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-12-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-02-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-01</th>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-01</th>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-05-01</th>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-01</th>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01</th>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-08-01</th>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-01</th>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-10-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-11-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-01</th>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-01-01</th>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-01</th>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-04-01</th>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-01</th>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-01</th>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-01</th>\n",
+       "      <td>15.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-08-01</th>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-09-01</th>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>22.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-11-01</th>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-01</th>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Cantidad\n",
+       "Mes                  \n",
+       "2020-01-01   3.000000\n",
+       "2020-02-01   8.000000\n",
+       "2020-03-01   1.000000\n",
+       "2020-04-01   3.333333\n",
+       "2020-05-01   5.666667\n",
+       "2020-06-01   8.000000\n",
+       "2020-07-01  10.000000\n",
+       "2020-08-01   3.000000\n",
+       "2020-09-01   8.000000\n",
+       "2020-10-01  16.000000\n",
+       "2020-11-01   9.000000\n",
+       "2020-12-01   3.000000\n",
+       "2021-01-01   1.000000\n",
+       "2021-02-01   5.000000\n",
+       "2021-03-01   3.000000\n",
+       "2021-04-01   1.000000\n",
+       "2021-05-01   5.000000\n",
+       "2021-06-01   9.000000\n",
+       "2021-07-01  11.000000\n",
+       "2021-08-01   7.000000\n",
+       "2021-09-01   3.000000\n",
+       "2021-10-01   4.000000\n",
+       "2021-11-01   4.000000\n",
+       "2021-12-01   4.000000\n",
+       "2022-01-01   4.000000\n",
+       "2022-02-01   9.000000\n",
+       "2022-03-01   1.000000\n",
+       "2022-04-01   1.000000\n",
+       "2022-05-01  10.000000\n",
+       "2022-06-01   4.000000\n",
+       "2022-07-01   5.000000\n",
+       "2022-08-01   4.000000\n",
+       "2022-09-01  11.000000\n",
+       "2022-10-01   5.000000\n",
+       "2022-11-01   8.000000\n",
+       "2022-12-01   3.000000\n",
+       "2023-01-01   3.000000\n",
+       "2023-02-01   8.000000\n",
+       "2023-03-01  15.000000\n",
+       "2023-04-01   2.000000\n",
+       "2023-05-01  10.000000\n",
+       "2023-06-01   6.000000\n",
+       "2023-07-01   7.000000\n",
+       "2023-08-01   6.000000\n",
+       "2023-09-01   5.000000\n",
+       "2023-10-01   9.000000\n",
+       "2023-11-01   9.000000\n",
+       "2023-12-01   6.000000\n",
+       "2024-01-01  20.000000\n",
+       "2024-02-01   4.000000\n",
+       "2024-03-01   8.000000\n",
+       "2024-04-01   6.000000\n",
+       "2024-05-01   9.000000\n",
+       "2024-06-01  15.000000\n",
+       "2024-07-01  15.000000\n",
+       "2024-08-01   8.000000\n",
+       "2024-09-01  10.000000\n",
+       "2024-10-01  22.000000\n",
+       "2024-11-01  29.000000\n",
+       "2024-12-01  12.000000"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def calcular_metricas(base_analisis_pergolite_com, fit):\n",
+    "    # Extraer valores ajustados del modelo Holt-Winters\n",
+    "    fit_values = fit.fittedvalues.squeeze()  # Convertir a Serie\n",
+    "\n",
+    "    # Convertir base a Serie si es DataFrame\n",
+    "    base_analisis_pergolite_com = base_analisis_pergolite_com.squeeze()\n",
+    "\n",
+    "    # Verificar dimensiones\n",
+    "    if len(base_analisis_pergolite_com) != len(fit_values):\n",
+    "        raise ValueError(f\"Dimensiones no coinciden: {len(base_analisis_pergolite_com)} vs {len(fit_values)}\")\n",
+    "\n",
+    "    mae = mean_absolute_error(base_analisis_pergolite_com, fit_values)\n",
+    "    mse = mean_squared_error(base_analisis_pergolite_com, fit_values)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "\n",
+    "    # MAPE evitando división por cero\n",
+    "    mask = base_analisis_pergolite_com != 0  # Filtrar ceros\n",
+    "    mape = np.mean(np.abs((base_analisis_pergolite_com[mask] - fit_values[mask]) / base_analisis_pergolite_com[mask])) * 100 if np.any(mask) else np.nan\n",
+    "\n",
+    "    return {\"MAE\": mae, \"MSE\": mse, \"RMSE\": rmse, \"MAPE\": mape}\n",
+    "\n",
+    "# Calcular métricas\n",
+    "metricas = calcular_metricas(base_analisis_pergolite_com, fit)\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "for k, v in metricas.items():\n",
+    "    print(f\"{k}: {v:.4f}\")\n",
+    "\n",
+    "\n",
+    "base_analisis_pergolite_com"
    ]
   },
   {
